--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -1,8 +1,173 @@
 ---
+- curated_id: oWwSZ9Xu4Zg49bpJDa0MWTMCyM67pScdNU+gxmUAZuo=_15c1797ddba:6a8b0:84519c1f
+  item_date: "2017-05-17 11:04:40"
+  title: Google brings 45 teraflops tensor flow processors to its compute cloud
+  url: https://arstechnica.com/?p=1099321
+  domain: arstechnica.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15c17d8116b:72f13:84519c1f
+  item_date: "2017-05-17 12:16:34"
+  title: Google is giving a cluster of 1,000 Cloud TPUs to researchers for free
+  url: http://techcrunch.com/?p=1492659
+  domain: techcrunch.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15c5f587763:1e4c9b:7c63ad1c
+  item_date: "2017-05-31 09:30:27"
+  title: "Google\u2019s Compute Engine now lets you choose between CPU platforms"
+  url: http://techcrunch.com/?p=1497325
+  domain: techcrunch.com
+  image: ""
 - curated_id: aTKLPW9AeQAh09DpOW/0/mK2tQUNNgIyAi3xy7MVsb4=_15c71ed05e6:7588c30:1980c846
   item_date: "2017-06-03 09:45:00"
   title: Tackling data sovereignty with DevOps ..
   url: https://carrenza.com/data-sovereignty-devops/
   domain: carrenza.com
+  image: ""
+- curated_id: AxQQtvE65+QaqkYOryE+b2QKezSYDbTCnNIX6p/weC0=_15cf7d2428f:45a6dd6:fe3a8465
+  item_date: "2017-06-29 23:51:15"
+  title: Accessing your AWS EC2 instances on the go
+  url: https://medium.com/p/3122ba46d853
+  domain: medium.com
+  image: ""
+- curated_id: aTKLPW9AeQAh09DpOW/0/mK2tQUNNgIyAi3xy7MVsb4=_15d42e5737a:2db3364:bb404dd5
+  item_date: "2017-07-14 13:54:28"
+  title: Lambda Labs
+  url: https://lambdal.com/
+  domain: lambdal.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15d5600804d:1a2969:ab1298eb
+  item_date: "2017-07-18 07:00:34"
+  title: "Google\u2019s Transfer Appliance helps businesses ship their data to the
+    Google Cloud by FedEx"
+  url: http://techcrunch.com/?p=1515487
+  domain: techcrunch.com
+  image: ""
+- curated_id: P6ZHWlrPQ5ILOZ54yDX4aZ046+AnYBvjvT3DdNFTXhQ=_15d84962183:ab5b5:8fa6dd97
+  item_date: "2017-07-27 08:00:40"
+  title: Amazon AppStream 2.0 Deploys GPUs to Speed Cloud
+  url: https://thenewstack.io/?p=2763560
+  domain: thenewstack.io
+  image: ""
+- curated_id: P6ZHWlrPQ5ILOZ54yDX4aZ046+AnYBvjvT3DdNFTXhQ=_15dc35814a9:28cf299:b8b2a437
+  item_date: "2017-08-08 12:31:36"
+  title: CNCF, Packet Provide Free Infrastructure for Cloud Developers
+  url: https://thenewstack.io/?p=2838475
+  domain: thenewstack.io
+  image: ""
+- curated_id: AxQQtvE65+QaqkYOryE+b2QKezSYDbTCnNIX6p/weC0=_15dc8e7fd06:7f1840:41b98b00
+  item_date: "2017-08-09 14:30:31"
+  title: Launching EC2 Instances from Lambda
+  url: https://medium.com/p/4a96f1264afb
+  domain: medium.com
+  image: ""
+- curated_id: QAaDgMpT7DqGuD1Yj9LF2HDECuy1+1dE9pGubJkFSCw=_15dcc03f70e:1b726c8:196efac0
+  item_date: "2017-08-10 04:30:21"
+  title: 'Seamless Upgrades: The Next Frontier for OpenStack'
+  url: http://blog.rackspace.com/?p=43350
+  domain: blog.rackspace.com
+  image: ""
+- curated_id: P6ZHWlrPQ5ILOZ54yDX4aZ046+AnYBvjvT3DdNFTXhQ=_15dcce57538:3801814:ce556ce1
+  item_date: "2017-08-10 09:00:59"
+  title: "Microsoft\u2019s Lightweight Linux Runtime Environment Comes to Windows
+    Server"
+  url: https://thenewstack.io/?p=2840002
+  domain: thenewstack.io
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15e1ef873e7:3de4fa:3e745506
+  item_date: "2017-08-26 07:35:40"
+  title: "DARPA project aims to make modular computers out of \u2018chiplets\u2019"
+  url: http://techcrunch.com/?p=1531816
+  domain: techcrunch.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15e3462a042:4dd0e:e457444
+  item_date: "2017-08-30 11:22:58"
+  title: Amazon just gave Windows users access to lower
+  url: http://techcrunch.com/?p=1533795
+  domain: techcrunch.com
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_15e820305fc:607c47:9dbe7464
+  item_date: "2017-09-14 08:47:23"
+  title: "Monetise With Your User\u2019s CPU Power"
+  url: https://medium.com/p/def05a66fff3
+  domain: medium.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15e816598ca:1f5e58:57a3f9c6
+  item_date: "2017-09-14 10:17:36"
+  title: AWS now offers a virtual machine with over 4TB of memory
+  url: http://techcrunch.com/?p=1541189
+  domain: techcrunch.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15eb91fed16:1226603:9dbe7464
+  item_date: "2017-09-25 06:00:02"
+  title: Azure gets more affordable with reserved instances and new cost management
+    features
+  url: http://techcrunch.com/?p=1546290
+  domain: techcrunch.com
+  image: ""
+- curated_id: P6ZHWlrPQ5ILOZ54yDX4aZ046+AnYBvjvT3DdNFTXhQ=_15f39400e11:7058e96:4d363ef0
+  item_date: "2017-10-20 03:00:40"
+  title: Does Artificial Intelligence Require Specialized Processors?
+  url: https://thenewstack.io/?p=3271993
+  domain: thenewstack.io
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_15f3b7b4eb4:d05f53:626ab4cd
+  item_date: "2017-10-20 13:30:54"
+  title: How Webmining Can Make The Internet A Better Place
+  url: https://medium.com/p/569ee78e9758
+  domain: medium.com
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_15f591d9686:312c1c1:aa3e42e1
+  item_date: "2017-10-26 06:30:38"
+  title: Add new users to EC2 and give SSH Key access
+  url: https://medium.com/p/d2abd084f30c
+  domain: medium.com
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_15f63f59c09:37078c:aa3e42e1
+  item_date: "2017-10-28 06:43:15"
+  title: Attach an IAM Role to an EC2 Instance with CloudFormation
+  url: https://medium.com/p/33c517a8d4c3
+  domain: medium.com
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_15f7847ee03:1b2454:8cbd7d4f
+  item_date: "2017-10-30 19:04:06"
+  title: TensorFlow (GPU) Setup for Developers
+  url: https://medium.com/p/7371ec0f04de
+  domain: medium.com
+  image: ""
+- curated_id: AxQQtvE65+QaqkYOryE+b2QKezSYDbTCnNIX6p/weC0=_15f9d1d4de9:241a5d:8cbd7d4f
+  item_date: "2017-11-08 11:31:01"
+  title: "What\u2019s not to love about Google App Engine?"
+  url: https://medium.com/p/31de6454e746
+  domain: medium.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_15fdae99a37:15ab228:1f4fc1eb
+  item_date: "2017-11-20 11:30:31"
+  title: Google Cloud Platform cuts the price of GPUs by up to 36 percent
+  url: http://techcrunch.com/?p=1569527
+  domain: techcrunch.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_160062eab51:dffbf:1f4fc1eb
+  item_date: "2017-11-28 21:09:19"
+  title: AWS launches bare metal instances
+  url: http://techcrunch.com/?p=1572213
+  domain: techcrunch.com
+  image: ""
+- curated_id: Xne8uW/IUiZhV1EuO2ZMzIrc2Ak6NlhGjboZ+Yk0rJ8=_160089897f6:4698a5:d77c33d7
+  item_date: "2017-11-29 08:24:45"
+  title: AWS announces two new EC2 instance types
+  url: http://techcrunch.com/?p=1572371
+  domain: techcrunch.com
+  image: ""
+- curated_id: P6ZHWlrPQ5ILOZ54yDX4aZ046+AnYBvjvT3DdNFTXhQ=_16008c0e23a:68116e:e597f5ed
+  item_date: "2017-11-29 09:02:01"
+  title: AWS Makes It Easier to Save Money with Spot Instances
+  url: https://thenewstack.io/?p=3594694
+  domain: thenewstack.io
+  image: ""
+- curated_id: aTKLPW9AeQAh09DpOW/0/mK2tQUNNgIyAi3xy7MVsb4=_160430fe053:1f19249:541f3c40
+  item_date: "2017-12-10 08:08:08"
+  title: 'AWS re:invent 2017: Evolution of the EC2 Host // Practical Applications'
+  url: https://www.awsgeek.com/posts/reinvent2017-evolution-of-the-ec2-host/
+  domain: www.awsgeek.com
   image: ""
 ...
