Updating _data/curated/index.yaml via Laneworks CMS Publish

--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -170,4 +170,22 @@
   url: https://www.awsgeek.com/posts/reinvent2017-evolution-of-the-ec2-host/
   domain: www.awsgeek.com
   image: ""
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac84:7157a206
+  item_date: "2018-01-10 09:04:21"
+  title: Key metrics for EC2 monitoring
+  url: https://www.datadoghq.com/blog/ec2-monitoring/
+  domain: www.datadoghq.com
+  image: ""
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
+  item_date: "2018-01-10 09:04:21"
+  title: How to collect EC2 metrics
+  url: https://www.datadoghq.com/blog/collecting-ec2-metrics/
+  domain: www.datadoghq.com
+  image: ""
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac82:7157a206
+  item_date: "2018-01-10 09:04:21"
+  title: How to monitor Amazon EC2 with Datadog
+  url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
+  domain: www.datadoghq.com
+  image: ""
 ...
