--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -170,6 +170,12 @@
   url: https://www.awsgeek.com/posts/reinvent2017-evolution-of-the-ec2-host/
   domain: www.awsgeek.com
   image: ""
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac82:7157a206
+  item_date: "2018-01-10 09:04:21"
+  title: How to monitor Amazon EC2 with Datadog
+  url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
+  domain: www.datadoghq.com
+  image: ""
 - curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
   item_date: "2018-01-10 09:04:21"
   title: How to collect EC2 metrics
@@ -180,12 +186,6 @@
   item_date: "2018-01-10 09:04:21"
   title: Key metrics for EC2 monitoring
   url: https://www.datadoghq.com/blog/ec2-monitoring/
-  domain: www.datadoghq.com
-  image: ""
-- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac82:7157a206
-  item_date: "2018-01-10 09:04:21"
-  title: How to monitor Amazon EC2 with Datadog
-  url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
   domain: www.datadoghq.com
   image: ""
 - curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_161ae22a9c0:1307981:e66afc8b
@@ -211,5 +211,11 @@
   title: The hunt for cheaper GPUs is turning up some unexpected bargains
   url: https://arstechnica.com/?p=1268671
   domain: arstechnica.com
+  image: ""
+- curated_id: xwisz6ZyxTVQZF9ECim7wa+q4F1sMWUZt/heMa4JVws=_1620a5503f5:4dca8fe:923c4a60
+  item_date: "2018-03-09 02:04:34"
+  title: Spot Vs. On
+  url: https://dzone.com/articles/2103912
+  domain: dzone.com
   image: ""
 ...
