Updating _data/curated/index.yaml via Laneworks CMS Publish

--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -170,6 +170,12 @@
   url: https://www.awsgeek.com/posts/reinvent2017-evolution-of-the-ec2-host/
   domain: www.awsgeek.com
   image: ""
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
+  item_date: "2018-01-10 09:04:21"
+  title: How to collect EC2 metrics
+  url: https://www.datadoghq.com/blog/collecting-ec2-metrics/
+  domain: www.datadoghq.com
+  image: ""
 - curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac84:7157a206
   item_date: "2018-01-10 09:04:21"
   title: Key metrics for EC2 monitoring
@@ -180,12 +186,6 @@
   item_date: "2018-01-10 09:04:21"
   title: How to monitor Amazon EC2 with Datadog
   url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
-  domain: www.datadoghq.com
-  image: ""
-- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
-  item_date: "2018-01-10 09:04:21"
-  title: How to collect EC2 metrics
-  url: https://www.datadoghq.com/blog/collecting-ec2-metrics/
   domain: www.datadoghq.com
   image: ""
 - curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_161ae22a9c0:1307981:e66afc8b
@@ -223,5 +223,11 @@
   title: Qubes OS 4.0 Launches With Fully
   url: http://www.tomshardware.com/news/qubes-os-4.0-fully-virtualized-vms,36774.html
   domain: www.tomshardware.com
+  image: ""
+- curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_1632a9099bd:3cd499:c2c34441
+  item_date: "2018-04-05 06:10:48"
+  title: AWS Elastic load balance and CORS issues
+  url: https://medium.com/p/cbe084635cf0
+  domain: medium.com
   image: ""
 ...
