--- a/_data/curated/index.yaml
+++ b/_data/curated/index.yaml
@@ -170,10 +170,10 @@
   url: https://www.awsgeek.com/posts/reinvent2017-evolution-of-the-ec2-host/
   domain: www.awsgeek.com
   image: ""
-- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac82:7157a206
   item_date: "2018-01-10 09:04:21"
-  title: How to collect EC2 metrics
-  url: https://www.datadoghq.com/blog/collecting-ec2-metrics/
+  title: How to monitor Amazon EC2 with Datadog
+  url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
   domain: www.datadoghq.com
   image: ""
 - curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac84:7157a206
@@ -182,10 +182,10 @@
   url: https://www.datadoghq.com/blog/ec2-monitoring/
   domain: www.datadoghq.com
   image: ""
-- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac82:7157a206
+- curated_id: YkHSjitc8H2BhHwUtfFoNoqyfwfO4rNj4K2jWs1BWP0=_160e107a0ca:ecac83:7157a206
   item_date: "2018-01-10 09:04:21"
-  title: How to monitor Amazon EC2 with Datadog
-  url: https://www.datadoghq.com/blog/monitoring-ec2-instances-with-datadog/
+  title: How to collect EC2 metrics
+  url: https://www.datadoghq.com/blog/collecting-ec2-metrics/
   domain: www.datadoghq.com
   image: ""
 - curated_id: xSjdJfPCkNisMpBgOt+tuQbeFffex9D91WxfhFeMbbc=_161ae22a9c0:1307981:e66afc8b
@@ -229,5 +229,11 @@
   title: AWS Elastic load balance and CORS issues
   url: https://medium.com/p/cbe084635cf0
   domain: medium.com
+  image: ""
+- curated_id: xwisz6ZyxTVQZF9ECim7wa+q4F1sMWUZt/heMa4JVws=_164f57fb8d2:4d2cd0:4c71e4fe
+  item_date: "2018-08-01 05:02:01"
+  title: 'From Instances to Functions: Evolution of AWS Compute Resources'
+  url: https://dzone.com/articles/2357483
+  domain: dzone.com
   image: ""
 ...
